# cli-dumper

./: README.md  project_dump.txt  pyproject.toml
.github/workflows/: ci.yaml
src/cli_dumper/: cli.py  core.py  display.py
src/dumper/: cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
